Me: Fix chevron alignment in Notifications (#33939)

--- a/client/me/notification-settings/blogs-settings/style.scss
+++ b/client/me/notification-settings/blogs-settings/style.scss
@@ -37,13 +37,11 @@
 }
 
 .blogs-settings__header-expand {
-	@extend %notification-settings-blog-settings-flexbox;
-	display: none;
-	color: var( --color-neutral-0 );
+	position: relative;
+		top: 4px;
 
-	@include breakpoint( '>480px' ) {
-		display: flex;
-	}
+	@extend %notification-settings-blog-settings-flexbox;
+	color: var( --color-neutral-0 );
 }
 
 .notification-settings-blog-settings-placeholder__blog {
